@@ -49,6 +49,9 @@ version 0.9.6 -- unreleased
 	   debconf-get-selections
 	 . fixed catifexec function to actually work, also now passes the arguments
 	   given to catifexec() to the called command (Thanks John Hallam!)
+	 . Added more robust software RAID information capture by running mdadm
+	   -Q --detail /dev/md?* because some people may have empty mdadm.conf files
+	   (Thanks to John Hallam).
 
 version 0.9.5 -- December 2, 2007
     backupninja changes
